<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/cvLogin"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:outlineSpotShadowColor="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="50dp">

            <TextView
                android:id="@+id/lbl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Masukan user dan password"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_username"
                style="@style/FontRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/lbl1">

                <EditText
                    android:id="@+id/etUsername"
                    style="@style/FontRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                style="@style/FontRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/input_layout_username">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/FontRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbRemember"
                style="@style/FontRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

            <TextView
                android:id="@+id/tvBtnLogin"
                style="@style/FontRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/forgot"
                android:textColor="@color/red"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogin"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="40dp"
                app:cardBackgroundColor="@color/peach"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBtnLogin">

                <TextView
                    android:gravity="center"
                    style="@style/FontRegular"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/gray" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>